<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_config"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvButtonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tvTaskTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_type"
        android:textSize="14sp"
        android:textColor="#333333"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="false"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/actvTaskType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_task_type"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTargetLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_station"
        android:textSize="14sp"
        android:textColor="#333333"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:endIconMode="dropdown_menu"
        app:hintEnabled="false"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/actvTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_station_hint"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/delete"
            app:cornerRadius="15dp"
            android:textSize="19sp"
            app:backgroundTint="#E25138"
            android:textColor="@android:color/white"
            android:layout_marginEnd="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/save"
            app:cornerRadius="15dp"
            android:textSize="19sp"
            app:backgroundTint="#2196F3"
            android:layout_marginEnd="20dp"
            android:textColor="@android:color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/add_floor"
            app:cornerRadius="15dp"
            android:textSize="19sp"
            app:backgroundTint="#2196F3"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>